# sysfetch

./: CMakeLists.txt  Colors.h  Cpu.cpp  Cpu.h  Gpu.cpp  Gpu.h  Logo.h  Menu.cpp  Menu.h  README.md  Ram.cpp  Ram.h  System.cpp  System.h  Uptime.cpp  Uptime.h  main.cpp
